--- a/index.html
+++ b/index.html
@@ -103,40 +103,120 @@
             <div class="row">
               <div class=col-12>
 
-                <img src="dj.png" class="img-fluid" style="max-width: 100%;" alt="Post">
-                <img src="medi.png" class="img-fluid" style="max-width: 100%;" alt="Post">
-                <img src="Comida.png" class="img-fluid" style="max-width: 100%;" alt="Post">
-                <img src="entre.png" class="img-fluid" style="max-width: 100%;" alt="Post">
-                <img src="arse.png" class="img-fluid" style="max-width: 100%;" alt="Post">
-                <img src="kylo.jpeg" class="img-fluid" style="width: 1300px; height:auto ;" alt="Post">
+                <div class="card-group w-100 mb-4">
+                  <div class="card">
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="card-title fs-3" style="margin-left: 5px;">Batalla</div>
+                      <div style="margin-right: 5px;">06/06</div>
+                    </div>
+                    <img src="dj.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">24.378 Likes...</h5>
+                      <p class="card-text">Los sables brillan en la penumbra mientras los Jedi luchan por mantener el
+                        equilibrio en la Fuerza.</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card-group w-100 mb-4">
+                  <div class="card">
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="card-title fs-3" style="margin-left: 5px;">Meditación</div>
+                      <div style="margin-right: 5px;">02/12</div>
+                    </div>
+                    <img src="medi.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">92543 Likes...</h5>
+                      <p class="card-text">En el silencio, la Fuerza habla. El Jedi respira, siente y se alinea con el
+                        equilibrio. No hay emoción, hay paz.”</p>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="card-group w-100 mb-4">
+                    <div class="card">
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="card-title fs-3" style="margin-left: 5px;">Comida</div>
+                        <div style="margin-right: 5px;">06/12</div>
+                      </div>
+                      <img src="Comida.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">66666 Likes...</h5>
+                        <p class="card-text">El Jedi se alimenta con gratitud. Cada bocado es energía, cada pausa,
+                          conexión con la Fuerza.</p>
+                      </div>
+                    </div>
+                  </div>
+                    <div class="card-group w-100 mb-4">
+                      <div class="card">
+                        <div class="d-flex justify-content-between align-items-center">
+                          <div class="card-title fs-3" style="margin-left: 5px;">Entrenamiento</div>
+                          <div style="margin-right: 5px;">13/11</div>
+                        </div>
+                        <img src="entre.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">21156 Likes...</h5>
+                          <p class="card-text">El sable refleja el alma. Cuerpo y mente entrenan en armonía, guiados
+                            por la Fuerza.</p>
+                        </div>
+                      </div>
+                    </div>
+                      <div class="card-group w-100 mb-4">
+                        <div class="card">
+                          <div class="d-flex justify-content-between align-items-center">
+                            <div class="card-title fs-3" style="margin-left: 5px;">Arsenal</div>
+                            <div style="margin-right: 5px;">06/01</div>
+                          </div>
+                          <img src="arse.png" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">99999 Likes...</h5>
+                            <p class="card-text">Este arsenal no es para la guerra, sino para la justicia. El Jedi
+                              elige con sabiduría y controla con equilibrio.</p>
+                          </div>
+                        </div>
+                      </div>
+              </div>
+                      <div class="card-group w-100 mb-4">
+                        <div class="card">
+                          <div class="d-flex justify-content-between align-items-center">
+                            <div class="card-title fs-3" style="margin-left: 5px;">Kylo</div>
+                            <div style="margin-right: 5px;">22/02</div>
+                          </div>
+                          <img src="kylo.jpeg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">457 Likes...</h5>
+                            <p class="card-text">Renuncié a la luz. Aquí reina el poder y la voluntad. El lado oscuro
+                              no perdona la duda.</p>
+                          </div>
+                        </div>
+                      </div>
+
+
+                    </div>
+                  </div>
+
+
+                </div>
+
 
 
               </div>
             </div>
-
-
           </div>
 
 
 
+
+        </div>
+
+
+        <div class="col-2">
+
         </div>
       </div>
-    </div>
 
-
-
-
-  </div>
-
-
-  <div class="col-2">
-
-  </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
 
 <!--modals...-->
