--- a/index.html
+++ b/index.html
@@ -12,234 +12,223 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-2"></div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-10">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><i class="bi bi-instagram"></i> Instagram</a>
 
+            <!-- COLAPSADOR-->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+              aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <div class="col-8">
-      <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <i class="bi bi-instagram"></i>
-            Instagram
-          </a>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#miModal">Create new
-              post</button>
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <i class="bi bi-command"></i>
+            <!-- Contenido del navbar -->
+            <div class="collapse navbar-collapse justify-content-end gap-2" id="navbarContent">
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#miModal">
+                Create a new post
               </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Inicio</a></li>
-                <li><a class="dropdown-item" href="#">Configuración</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                <div class="dropdown-divider"></div>
-                <li><a class="dropdown-item text-danger" href="#">Cerrar Sesion</a></li>
-              </ul>
+
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  <i class="bi bi-gear-wide-connected"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                </ul>
+              </div>
             </div>
           </div>
-
-        </div>
-      </nav>
-
-
-      <!-- Zona de doble visual dentro div.-->
-
-      <div class="d-flex justify-content-center align-items-center">
-        <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button"
-              role="tab" aria-controls="home-tab-pane" aria-selected="true"><i class="bi bi-grid-3x2-gap"></i></button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-              type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><i
-                class="bi bi-view-list"></i></button>
-          </li>
-        </ul>
+        </nav>
       </div>
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-          tabindex="0">
-          <div class="container-fluid">
-            <div class="row g-1">
-              <div class="col-4">
-                <img src="dj.png" class="img-thumbnail" style="aspect-ratio: 1/1; object-fit: cover;" alt="Post insta">
-              </div>
-              <div class="col-4">
-                <img src="medi.png" class="img-thumbnail" style="aspect-ratio: 1/1; object-fit: cover;"
-                  alt="post insta">
-              </div>
-              <div class="col-4">
-                <img src="Comida.png" class="img-thumbnail" style="aspect-ratio: 1/1; object-fit: cover;" alt="Post3">
-              </div>
+    </div>
+    </nav>
+    <!--Navbar boton y dropdown END-->
+    <!---TAVBAR OPEN-->
 
-              <!--SEGUNDA FASE-->
+    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button"
+          role="tab" aria-controls="home-tab-pane" aria-selected="true"><i class="bi bi-microsoft"></i></button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button"
+          role="tab" aria-controls="profile-tab-pane" aria-selected="false"><i class="bi bi-fullscreen"></i></button>
+      </li>
 
-              <div class="row g-1">
-                <div class="col-4">
-                  <img src="entre.png" class="img-thumbnail" style="aspect-ratio: 1/1; object-fit: cover;"
-                    alt="Post insta">
-                </div>
-                <div class="col-4">
-                  <img src="arse.png" class="img-thumbnail" style="aspect-ratio: 1/1; object-fit: cover;"
-                    alt="post insta">
-                </div>
-                <div class="col-4">
-                  <img src="kylo.jpeg" class="img-thumbnail" style="width: 100%; height: 100%; object-fit: cover;"
-                    alt="Post3">
-                </div>
-              </div>
-            </div>
+      <!--COLUMNAS -->
+
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+
+        <div class="row g-1">
+          <div class="col-6 col-md-4">
+            <img src="dj.png" class="img-thumbnail img-fluid" style="aspect-ratio: 1/1; object-fit: cover;"
+              alt="Post insta">
+            <img src="entre.png" class="img-thumbnail img-fluid" style="aspect-ratio: 1/1; object-fit: cover;"
+              alt="Post insta">
+
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="medi.png" class="img-thumbnail img-fluid" style="aspect-ratio: 1/1; object-fit: cover;"
+              alt="Post insta">
+            <img src="arse.png" class="img-thumbnail img-fluid" style="aspect-ratio: 1/1; object-fit: cover;"
+              alt="Post insta">
+
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="Comida.png" class="img-thumbnail img-fluid" style="aspect-ratio: 1/1; object-fit: cover;"
+              alt="Post insta">
+            <img src="kylo.jpeg" class="img-thumbnail img-fluid" style="width: 100%; height: 50%; object-fit: cover;"
+              alt="Post insta">
+
           </div>
         </div>
 
-        <!--zona de rotura!!!-->
+      </div>
 
-        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-          <div class="container-fluid">
-            <div class="row">
-              <div class=col-12>
+      <!-- ZONA DE CAMBIO-->
 
-                <div class="card-group w-100 mb-4">
-                  <div class="card">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="card-title fs-3" style="margin-left: 5px;">Batalla</div>
-                      <div style="margin-right: 5px;">06/06</div>
-                    </div>
-                    <img src="dj.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">24.378 Likes...</h5>
-                      <p class="card-text">Los sables brillan en la penumbra mientras los Jedi luchan por mantener el
-                        equilibrio en la Fuerza.</p>
-                    </div>
-                  </div>
-                </div>
+      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+        <div class=" w-100 mb-4">
 
-                <div class="card-group w-100 mb-4">
-                  <div class="card">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="card-title fs-3" style="margin-left: 5px;">Meditación</div>
-                      <div style="margin-right: 5px;">02/12</div>
-                    </div>
-                    <img src="medi.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">92543 Likes...</h5>
-                      <p class="card-text">En el silencio, la Fuerza habla. El Jedi respira, siente y se alinea con el
-                        equilibrio. No hay emoción, hay paz.”</p>
-                    </div>
-                  </div>
-                  </div>
-                  <div class="card-group w-100 mb-4">
-                    <div class="card">
-                      <div class="d-flex justify-content-between align-items-center">
-                        <div class="card-title fs-3" style="margin-left: 5px;">Comida</div>
-                        <div style="margin-right: 5px;">06/12</div>
-                      </div>
-                      <img src="Comida.png" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">66666 Likes...</h5>
-                        <p class="card-text">El Jedi se alimenta con gratitud. Cada bocado es energía, cada pausa,
-                          conexión con la Fuerza.</p>
-                      </div>
-                    </div>
-                  </div>
-                    <div class="card-group w-100 mb-4">
-                      <div class="card">
-                        <div class="d-flex justify-content-between align-items-center">
-                          <div class="card-title fs-3" style="margin-left: 5px;">Entrenamiento</div>
-                          <div style="margin-right: 5px;">13/11</div>
-                        </div>
-                        <img src="entre.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">21156 Likes...</h5>
-                          <p class="card-text">El sable refleja el alma. Cuerpo y mente entrenan en armonía, guiados
-                            por la Fuerza.</p>
-                        </div>
-                      </div>
-                    </div>
-                      <div class="card-group w-100 mb-4">
-                        <div class="card">
-                          <div class="d-flex justify-content-between align-items-center">
-                            <div class="card-title fs-3" style="margin-left: 5px;">Arsenal</div>
-                            <div style="margin-right: 5px;">06/01</div>
-                          </div>
-                          <img src="arse.png" class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">99999 Likes...</h5>
-                            <p class="card-text">Este arsenal no es para la guerra, sino para la justicia. El Jedi
-                              elige con sabiduría y controla con equilibrio.</p>
-                          </div>
-                        </div>
-                      </div>
-              </div>
-                      <div class="card-group w-100 mb-4">
-                        <div class="card">
-                          <div class="d-flex justify-content-between align-items-center">
-                            <div class="card-title fs-3" style="margin-left: 5px;">Kylo</div>
-                            <div style="margin-right: 5px;">22/02</div>
-                          </div>
-                          <img src="kylo.jpeg" class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">457 Likes...</h5>
-                            <p class="card-text">Renuncié a la luz. Aquí reina el poder y la voluntad. El lado oscuro
-                              no perdona la duda.</p>
-                          </div>
-                        </div>
-                      </div>
-
-
-                    </div>
-                  </div>
-
-
-                </div>
-
-
-
-              </div>
+          <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+              <h5 class="card-title mb-0">Batalla</h5>
+              <small class="text-muted">06/06</small>
+            </div>
+            <img src="dj.png" class="card-img-top img-fluid" alt="...">
+            <div class="card-body">
+              <h6 class="card-title">24.378 Likes...</h6>
+              <p class="card-text">Los sables brillan en la penumbra mientras los Jedi luchan por mantener el
+                equilibrio en la Fuerza.</p>
             </div>
           </div>
 
 
+        </div>
+        <div class="card mb-3 mb-md-4">
+          <div class="card-header d-flex justify-content-between align-items-center">
+            <h5 class="card-title fs-3 fs-md-2 mb-0">Meditación</h5>
+            <small class="text-muted">02/12</small>
+          </div>
+          <img src="medi.png" class="card-img-top img-fluid" alt="Meditación">
+          <div class="card-body">
+            <h6 class="card-title">92.543 Likes</h6>
+            <p class="card-text">En el silencio, la Fuerza habla. El Jedi respira, siente y se alinea con el
+              equilibrio. No hay emoción, hay paz.</p>
+          </div>
+        </div>
+        <div class="card-group w-100 mb-4">
+          <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+              <h5 class="card-title mb-0" style="margin-left: 5px;">Comida</h5>
+              <small class="text-muted">06/10</small>
+            </div>
+            <img src="Comida.png" class="card-img-top img-fluid" alt="...">
+            <div class="card-body">
+              <h6 class="card-title">66666 Likes...</h6>
+              <p class="card-text">El Jedi se alimenta con gratitud. Cada bocado es energía, cada pausa,
+                conexión con la Fuerza.</p>
+            </div>
+          </div>
+        </div>
 
+        <div class="card-group w-100 mb-4">
+          <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+              <h5 class="card-title mb-0" style="margin-left: 5px;">Entrenamiento</h5>
+              <small style="margin-right: 5px;">13/11</small>
+            </div>
+            <img src="entre.png" class="card-img-top img-fluid" alt="...">
+            <div class="card-body">
+              <h6 class="card-title">21156 Likes...</h6>
+              <p class="card-text">El sable refleja el alma. Cuerpo y mente entrenan en armonía, guiados
+                por la Fuerza.</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-group w-100 mb-4">
+          <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+              <h5 class="card-title mb-0" style="margin-left: 5px;">Arsenal</h5>
+              <small style="margin-right: 5px;">06/01</small>
+            </div>
+            <img src="arse.png" class="card-img-top img-fluid" alt="...">
+            <div class="card-body">
+              <h6 class="card-title">99999 Likes...</h6>
+              <p class="card-text">Este arsenal no es para la guerra, sino para la justicia. El Jedi
+                elige con sabiduría y controla con equilibrio.</p>
+            </div>
+          </div>
+        </div>
 
+        <div class="card-group w-100 mb-4">
+          <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+              <h5 class="card-title mb-0" style="margin-left: 5px;">Kylo</h5>
+              <small style="margin-right: 5px;">22/02</small>
+            </div>
+            <img src="kylo.jpeg" class="card-img-top img-fluid" alt="...">
+            <div class="card-body">
+              <h6 class="card-title">457 Likes...</h6>
+              <p class="card-text">Renuncié a la luz. Aquí reina el poder y la voluntad. El lado oscuro
+                no perdona la duda.</p>
+            </div>
+          </div>
         </div>
 
 
-        <div class="col-2">
 
+      </div><!--div cierre tab-->
+
+    </div>
+  </div>
+  </div>
+  </div>
+
+
+
+
+
+
+
+
+
+  <!--modals...-->
+  <div class="modal fade" id="miModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Crear post</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      </div>
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-</body>
-
-<!--modals...-->
-<div class="modal fade" id="miModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Crear post</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Descripción</p>
-        <input type="text" class="form-control" placeholder="24 carácteres" aria-describedby="addon-wrapping">
-        <br>
-        <button type="button" class="btn btn-light"><i class="bi bi-pin-map"></i></button>
-        <button type="button" class="btn btn-light"><i class="bi bi-camera"></i></button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary">Cargar</button>
+        <div class="modal-body">
+          <p>Descripción</p>
+          <input type="text" class="form-control" placeholder="24 carácteres" aria-describedby="addon-wrapping">
+          <br>
+          <button type="button" class="btn btn-light"><i class="bi bi-pin-map"></i></button>
+          <button type="button" class="btn btn-light"><i class="bi bi-camera"></i></button>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary">Cargar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
 </html>
